--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js"
+    "dev": "nodemon dist/index.js",
+    "migration:create": "rm -rf ./src/migrations/* && rm -rf ./dist/migrations/* && env-cmd npx mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -24,8 +25,10 @@
     "@mikro-orm/migrations": "^4.0.0-alpha.0",
     "@mikro-orm/postgresql": "^4.0.0-alpha.0",
     "apollo-server-express": "^2.17.0",
+    "argon2": "^0.27.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "pg": "^8.3.3",
