--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.14",
     "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
     "@types/node": "^14.6.1",
+    "@types/redis": "^2.8.27",
     "class-validator": "^0.12.2",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
@@ -26,12 +29,16 @@
     "@mikro-orm/postgresql": "^4.0.0-alpha.0",
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "helmet": "^4.1.0",
     "pg": "^8.3.3",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0"
   },
