--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/core": "^0.5.2",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@urql/exchange-graphcache": "^3.1.3",
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
